# qan-nondeterministic-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
nondeterministic_agent/: execution.py  planning.py  review.py
nondeterministic_agent/agents/: execution_agent.py  planning_agent.py
nondeterministic_agent/config/: settings.py
nondeterministic_agent/managers/: metrics_manager.py  state_manager.py
nondeterministic_agent/placeholders/: c.py  cpp.py  csharp.py  go.py  java.py  js.py  kt.py  php.py  pl.py  py.py  rb.py  rs.py  scala.py  ts.py
nondeterministic_agent/prompts/: coder_prompt.py  scope_planner_prompt.py  tasks_planner_prompt.py
nondeterministic_agent/services/: aider_service.py  llm_service.py  qan_service.py
nondeterministic_agent/utils/: cli_helpers.py  file_utils.py  log_config.py  string_utils.py
qan/: __init__.py  qan.py
results/scope/: CPU__Microarchitecture_Additional_Microarchitectural_Factors.yaml  CPU__Microarchitecture_Caches_TLB__Bus.yaml  CPU__Microarchitecture_Core_Frequency__Power_States.yaml  CPU__Microarchitecture_Hardware_Transactional_Memory_HTM.yaml  CPU__Microarchitecture_Out-of-Order__Speculative_Execution.yaml  Concurrency__Scheduling_Background_Helper_Threads.yaml  Concurrency__Scheduling_IPC__Inter-Process_Scheduling.yaml  Concurrency__Scheduling_Multi-Threading__Data_Races.yaml  Concurrency__Scheduling_Signals.yaml  Containerization__Virtualization_Hypervisor_Scheduling.yaml  (+65 more)
scripts/: generate_report.py  run_all_plans.sh  run_all_scopes.sh
